fixed evaluation of array fields in docker::build_options
now, if one specifies the following:

  docker::daemon_options:
    host:
      - "tcp://127.0.0.1:4243"
      - "unix://var/run/docker.sock"

it will be turned into the following result:

  --host tcp://127.0.0.1:4243 --host unix://var/run/docker.sock

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -2,7 +2,7 @@
 lookup_options:
   docker::daemon_options:
     merge:
-      strategy: hash
+      strategy: deep
   docker::packages:
     merge:
       strategy: hash
