adding /var/run/docker.sock

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -11,6 +11,8 @@ docker::containers: {}
 docker::volumes: {}
 docker::networks: {}
 docker::daemon_options:
+  host:
+    "unix:///var/run/docker.sock"
   selinux:
     enabled: true
   log:
