--- a/data/osfamily/RedHat/7.2.1511.yaml
+++ b/data/osfamily/RedHat/7.2.1511.yaml
@@ -2,3 +2,5 @@
 docker::packages:
   'docker-engine':
     ensure: '1.12.6-1.el7.centos'
+  'docker-engine-selinux':
+    ensure: '1.12.6-1.el7.centos'
