--- a/data/common.yaml
+++ b/data/common.yaml
@@ -16,6 +16,9 @@ docker::opts:
     - 'unix:///var/run/docker.sock'
   'selinux-enabled': true
   'log-driver': journald
+docker::data_on_lvm: false
+  fs_opts: {}
+  mount_opts: {}
 docker::config_dir: '/etc/docker'
 docker::config_file: "%{lookup('docker::config_dir')}/daemon.json"
 docker::config_file_manage: true
