--- a/data/common.yaml
+++ b/data/common.yaml
@@ -51,6 +51,7 @@ docker::gc::opts:
 docker::gc::exclude_images: []
 docker::gc::exclude_containers: []
 docker::gc::state_dir: '/var/lib/docker-gc'
+docker::gc::log_file: '/var/log/docker-gc.log'
 docker::gc::config_dir: '/etc/docker-gc'
 docker::gc::config_file: "%{lookup('docker::gc::config_dir')}/docker-gc.conf"
 docker::gc::image_name: 'spotify/docker-gc:latest'
